--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ attrs==25.3.0
 blinker==1.9.0
 click==8.2.1
 Flask==3.1.1
+gunicorn==23.0.0
 ics==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 python-dateutil==2.9.0.post0
 six==1.17.0
 TatSu==5.13.1
