--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==25.0
 python-dateutil==2.9.0.post0
+pytz==2025.2
 six==1.17.0
 TatSu==5.13.1
 types-python-dateutil==2.9.0.20250516
